[project]
name = "mainly_crappy"
version = "0.1.0"
description = "A pile of garbage."
authors = [
    "Joe Schlimmer <joe@schlimmers.space>"
    "Mike Schlimmer <mikkowus@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
keywords = ["garbage"]

#requirements
[dependencies]
bs4 = "^4.10"